@@ -2229,10 +2229,9 @@ void server::delete_game(std::vector<wesnothd::game*>::iterator game_it) {
 
 	// Send a diff of the gamelist with the game deleted to players in the lobby
 	simple_wml::document diff;
-	bool send_diff = false;
 	if(make_delete_diff(*gamelist, "gamelist", "game",
 	                    (*game_it)->description(), diff)) {
-		send_diff = true;
+		lobby_.send_data(diff);
 	}
 
 	// Delete the game from the games_and_users_list_.
@@ -2247,6 +2246,7 @@ void server::delete_game(std::vector<wesnothd::game*>::iterator game_it) {
 		LOG_SERVER << "Could not find game (" << (*game_it)->id()
 			<< ") to delete in games_and_users_list_.\n";
 	}
+
 	const wesnothd::user_vector& users = (*game_it)->all_game_users();
 	// Set the availability status for all quitting users.
 	for (wesnothd::user_vector::const_iterator user = users.begin();
@@ -2255,17 +2255,15 @@ void server::delete_game(std::vector<wesnothd::game*>::iterator game_it) {
 		const wesnothd::player_map::iterator pl = players_.find(*user);
 		if (pl != players_.end()) {
 			pl->second.mark_available();
+			simple_wml::document udiff;
 			if (make_change_diff(games_and_users_list_.root(), NULL,
-					     "user", pl->second.config_address(), diff)) {
-				send_diff = true;
+					     "user", pl->second.config_address(), udiff)) {
+				lobby_.send_data(udiff);
 			}
 		} else {
 			ERR_SERVER << "ERROR: delete_game(): Could not find user in players_. (socket: "
 				<< *user << ")\n";
 		}
-	}
-	if (send_diff) {
-		lobby_.send_data(diff);
 	}
 
 	//send users in the game a notification to leave the game since it has ended
